# 3p-plugin-dice-duel

./: .gitattributes  .gitignore  Anchor.toml  Cargo.toml  README.md  declarations.d.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo  txtx.yml  vitest.config.ts
client/: index.ts  register-windows.ts  state.ts  window-keys.ts
client/api/: index.ts  (+1 more)
e2e-test/: test.cjs  test.mjs
programs/dice-duel/: Cargo.toml
programs/dice-duel/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/dice-duel/src/instructions/: accept_wager.rs  cancel_wager.rs  claim_expired.rs  claim_vrf_timeout.rs  claim_winnings.rs  cleanup_stale_wager.rs  consume_randomness.rs  consume_randomness_minimal.rs  consume_randomness_resolved.rs  initialize.rs  initiate_wager.rs  mint_dice_bag.rs  mod.rs  settle_wager.rs
programs/dice-duel/src/instructions/admin/: mod.rs  pause.rs  register_game_type.rs  update_config.rs  update_game_type.rs
programs/dice-duel/src/state/: config.rs  dice_bag.rs  game_type.rs  mod.rs  player_stats.rs  wager.rs
programs/dice-duel/tests/: dice_duel_test.rs  helpers.ts  nonce_tests.rs
runbooks/: README.md
scripts/: anchor-build.sh  claim-timeouts.ts  codegen-svm.mjs  deploy-devnet.ts  init-devnet.ts  test-diceduel-full.ts  test-diceduel.ts  test-full-game-devnet.ts  test-full-game-v2.ts  test-magicblock-example.ts  test-nonce-e2e-devnet.ts  test-v2-resolved-devnet.ts  test-vrf-devnet.ts  vrf-analysis.js
server/: index.ts
shared/: assets.ts  chains.ts  constants.ts  dice-faces.ts  event-data.ts  index.ts  manifest.ts  messages.ts  tokenUtils.ts
(+79 files in other folders)
