[package]
name = "dice-duel"
version = "0.1.0"
description = "DiceDuel - Peer-to-peer dice wagering on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dice_duel"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-mode = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
ephemeral-vrf-sdk = { version = "0.2.1", features = ["anchor"] }
mpl-core = "0.11.1"

# Pin to avoid edition2024 requirement (Solana BPF toolchain uses Cargo 1.84)
constant_time_eq = "=0.3.1"
rmp = "=0.8.14"

[dev-dependencies]
solana-program-test = "2.2"
solana-sdk = "2.2"
borsh = "0.10"
tokio = { version = "1", features = ["full"] }
